# isitabot

./: .env  .gitignore  .gitmodules  Procfile  README.md  api.py  main.py  models_gen.py  project.toml  requirements.txt
.github/workflows/: python-app.yml
api/: .gitignore  README.md  analyze.py  main.py  requirements.txt  run.sh  setup.cfg
api/app/: __init__.py  json_scraper.py
api/app/templates/: about.html  index.html  text-analysis.html
api/isitabot/: __init__.py  config.py
api/isitabot/api/: __init__.py
api/isitabot/utils/: route_validation.py
api/ml/: dump.raw.txt  knn.ipynb  xgboost.ipynb
api/ml/code/: interpret_result.py
app/: .eslintrc  __init__.py  index.html  netlify.toml  package.json  routes.py
app/api/: api.py
app/api_interfaces/: twitter.py
app/src/: App.vue  main.ts  router.ts
app/src/api_interfaces/: reddit.py  twitter.py
app/src/components/: Card.vue
app/src/components/Display/: AppHeader.vue
app/src/utils/: bot_ids-twitter.txt  json_scraper.py  midterm-2018.tsv  user_ids-twitter.txt  validation.py
app/src/views/: About.vue  Home.vue  TextAnalysis.vue
app/templates/: about.html  comment-demo.html  index.html  layout.html  text-demo.html  user-platform-demo.html
app/utils/: LM_probabilities.py
ml/: spacy_playground.ipynb  test2.ipynb
