[metadata]
name = isitabot 
version = 1.0.0
maintainer = isitabot 
long_description = file: README.md
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    isitabot